# vulkan-app

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.txt  build.sh
app/: app.cpp  app.hpp  app_settings.hpp  buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  device.cpp  device.hpp  framebuffers.cpp  host.cpp  instance.cpp  main.cpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  swapchain.cpp  swapchain.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
cmake/modules/: ShaderUtils.cmake
doc/: README.txt  TODO.txt  command_buffers.txt  devices.txt  dynamic_rendering.txt  framebuffers.txt  glsl.txt  loader.txt  memory.txt  notes.txt  pipeline.txt  render_pass.txt  resources.txt  shader_redux.txt  shaders.txt  swapchain.txt  synchronization.txt  vulkan_loader.txt
shaders/glsl/triangle/: compile.sh
src/: app.cpp  app.h  app.hpp  app_settings.hpp  app_utils.hpp  command_pool.cpp  command_pool.h  command_pool.hpp  device.cpp  device.h  device.hpp  framebuffers.cpp  framebuffers.hpp  host.cpp  host.h  host.hpp  instance.cpp  instance.h  instance.hpp  main.cpp  physical_device.cpp  physical_device.h  physical_device.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  synchronization.cpp  synchronization.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
test/: CMakeLists.txt  test.cpp
test/app-vulkan-hpp/: CMakeLists.txt  main.cpp
test/app-vulkan-hpp/utils/: ostream_formatters.hpp  utils.cpp  utils.hpp
utils/: CMakeLists.txt
utils/include/: utils.hpp
utils/src/: utils.cpp
